# hatch-vs-poetry-vs-rye

./: README.md
.github/workflows/: hatch.yml  poetry.yml  rye.yml  uv.yml
hatch-demo/: README.md  pyproject.toml
hatch-demo/src/hatch_demo/: __main__.py  demo.py
hatch-demo/tests/: test_demo.py
poetry-demo/: README.md  pyproject.toml
poetry-demo/tests/: test_demo.py
rye-demo/: README.md  pyproject.toml
rye-demo/src/rye_demo/: __main__.py
rye-demo/tests/: test_demo.py
uv-demo/: README.md  pyproject.toml
uv-demo/src/uv_demo/: __init__.py  __main__.py  demo.py
uv-demo/tests/: test_demo.py
