[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["David Kun <davidkun4@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_demo", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
polars = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rundemo = 'poetry_demo.demo:main'