[project]
name = "rye-demo"
version = "0.1.0"
description = ""
authors = [
    { name = "David Kun", email = "davidkun4@gmail.com" }
]
dependencies = [
    "requests>=2.32.3",
    "polars>=1.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"rye-demo" = "rye_demo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.2",
    "ruff>=0.5.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rye_demo"]
